# munkres-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: solve_assignment.rs
src/: coverage.rs  lib.rs  mark_matrix.rs  square_matrix.rs  weight_matrix.rs  weight_num.rs
